Prevent clipping of modal from LifterLMS global overflow overwrite.

--- a/assets/css/scss/admin-views.scss
+++ b/assets/css/scss/admin-views.scss
@@ -484,6 +484,7 @@ $gv-overlay-index: 10000;
 	> .inside {
 		padding: 0;
 		border-radius: 5px;
+		overflow: visible;
 	}
 	#gv-view-configuration-tabs {
 		padding: 0;
